# Projects-

./: README.md
Databases and Data Modelling/: IN2090_assignment3.py  IN2090_oblig2.sql
Design/: README.md
IN2090_assignments/: IN2090_oblig3.sql
IN3050_assignment2/: in3050_in4050_2023_assignment_2.ipynb
IN3050_assignmetns/IN3050_assignment3/: IN3050_assignment_3.ipynb
IN3110_assignment2/: array_class.py  test_array.py
IN3110_assignment3/insta_filter.egg-info/: PKG-INFO  SOURCES.txt
IN3110_assignment3/instapy/: __main__.py  io.py  timing-report.txt  timing.py
IN3110_assignment3/test/: test_numba.py  timing-report.txt
IN3110_assignment4/: collect_dates.py  output.txt  time_planner.py
IN3110_assignments/IN3110_assignment3/: pyproject.toml
IN3110_assignments/IN3110_assignment3/instapy/: numpy_filters.py
IN3110_assignments/IN3110_assignment3/instapy.egg-info/: PKG-INFO
IN3110_assignments/IN3110_assignment3/test/: test_numpy.py
IN3110_assignments/IN3110_assignment4/: fetch_player_statistics.py  filter_urls.py
Introduction to Artificial Intelligence and Machine Learning/IN3050_assignment1/: Assignment1 (3).ipynb
Problem Solving with High-Level Languages/IN3110_assignment2/: README.md
Problem Solving with High-Level Languages/IN3110_assignment3/: README.md
Problem Solving with High-Level Languages/IN3110_assignment3/instapy/: cli.py  numba_filters.py  python_filters.py
Problem Solving with High-Level Languages/IN3110_assignment4/: README.md  example-plot.py  requesting_urls.py
(+1 files in other folders)
